# kafka-scale-demo

./: Cargo.toml  input.json  lib.rs  output.json  scale.signature  scalefile
host/: go.mod  go.sum  local-kafkatransforms-latest.scale  main.go
