
[package]
name = "kafkatransforms"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
serde ={ version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signature = { package = "shivanshvij_kafkatransforms_latest_guest", version = "0.1.0", registry = "scale" }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
